custom-domain.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-custom

  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx.treichels.net
    
spec:
  type: ExternalName
  externalName: nginx.default.knative.treichels.net
