kservice.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  template:
    spec:
      volumes:
        - name: config
          configMap:
            name: nginx-config
        - name: data
          configMap:
            name: nginx-data

      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: "1"
              memory: 128Mi

          readinessProbe:
            successThreshold: 1
            tcpSocket:
              port: 0
    
          volumeMounts:
            - name: config
              readOnly: true
              mountPath: /etc/nginx/conf.d
            - name: data
              readOnly: true
              mountPath: /usr/share/nginx/html
